# S2V-agent_final

./: ._cli_shared.py  .gitignore  AGENTS.md  README.md  README.md.bak  annotate_teacher_judge_sft.py  batch_run_saver_rollout.py  build_feature_cache.py  build_frame_cache.py  build_saver_data.py  cli_shared.py  convert_to_saver_agent.py  hold_h200_80g_idle.py  materialized_cache.py  prepare_materialized_cache.py  protocol_signature.py  pyproject.toml  rollout.py  run_saver_rollout.py  runtime.py  test_rl_runtime.py  test_root_cure_protocol.py  timesearch_aligned_grpo_trainer.py  train_saver_rl.py  train_saver_rl_trl.py  training.py  trl_grpo_trainer.py
.omx/: metrics.json
configs/: README.md
data_utils/: __init__.py  jsonl.py  msad_saver_runtime_test.materialized_items_v4.jsonl.meta.json  msad_saver_runtime_test.materialized_items_v4.jsonl.summary.json  msad_saver_runtime_test.materialized_items_v5.jsonl.meta.json  msad_saver_runtime_test.materialized_items_v5.jsonl.summary.json  msad_saver_runtime_train.materialized_items_v5.jsonl.meta.json  msad_saver_runtime_train.materialized_items_v5.jsonl.summary.json  sft_train.compact_trace_v5.jsonl.meta.json  sft_train.compact_trace_v5.jsonl.summary.json  sft_train.compact_trace_v5.materialized_messages_v5.jsonl.meta.json  sft_train.compact_trace_v5.materialized_messages_v5.jsonl.summary.json  sft_train.compact_trace_v5.teacher_materialized_messages_v5.jsonl.meta.json  sft_train.compact_trace_v5.teacher_materialized_messages_v5.jsonl.summary.json  sft_train.teacher_rollout_primary.compact_trace_v5.jsonl.meta.json  (+1 more)
(+319 files in other folders)
